<resources>
    <string name="dialog_loading_text">Cargando. Danos unos segundos...</string>


    <string name="home_has_infected_users">Has infectado a %s de %s usuarios</string>
    <string name="home_has_infected_percentage">%s% del total</string>
    <!--Tabbar-->

    <string name="tabbar_home">Inicio</string>
    <string name="tabbar_news">Noticias</string>
    <string name="tabbar_ranking">Ranking</string>

    <!-- Login -->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button_join">Iniciar Sesión</string>
    <string name="login_button_register">Registrarte</string>
    <string name="login_forgot_password">¿Has olvidado tu contraseña?</string>

    <!-- Register -->
    <string name="register_start_text">¡Bienvenido a InfectApp! Crea tu cuenta en tres simples pasos.</string>
    <string name="register_start_button">Comenzar</string>
    <string name="register_email_text">Introduce tu email</string>
    <string name="register_email_button">Siguiente</string>
    <string name="register_email_error">Debes introducir un email válido</string>
    <string name="register_username_text">Ahora dinos tu nombre de usuario</string>
    <string name="register_username_button">Finalizar</string>
    <string name="register_password_button">Siguiente</string>
    <string name="register_password_min_lenght">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_password_equal">Las contraseñas no coinciden</string>

    <!-- Home-->
    <string name="home_infected_by">Infectados por ti</string>
    <string name="home_infected_total">Total infectados</string>
    <string name="home_infected_today">Infectados hoy</string>
    <string name="home_position">Tu posicion</string>
    <string name="home_velocity">Velocidad actual de propagacion</string>
    <string name="home_infected_at_day">%s al día</string>
</resources>
