<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etLoginUser"
        style="@style/EditTextBlackBorder"
        android:layout_marginStart="60dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="60dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bLoginJoin"
        style="@style/ButtonActionGreen"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:text="@string/login_button_join"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etLoginPassword"
        style="@style/EditTextBlackBorder"
        android:elevation="2dp"
        android:layout_marginTop="26dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etLoginUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLoginUser"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUser" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etLoginUser"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etLoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/etLoginUser"
        app:layout_constraintStart_toStartOf="@+id/etLoginUser" />

    <TextView
        android:id="@+id/textView3"
        android:textColor="@color/greenRadioactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/login_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <Button
        android:id="@+id/bLoginRegister"
        style="@style/ButtonActionGreen"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="50dp"
        android:text="@string/login_button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>